classDiagram
    direction LR

    namespace Identity {
        class Customer {
            <<entity>>
            +UUID id
            +String name
            +String email
            +AccountStatus accountStatus
            +deactivate()
        }

        class Address {
            <<value/entity>>
            +UUID id
            +AddressType type
            +String recipientName
            +String suburb
            +String state
            +String postcode
        }

        class FragrancePreferenceProfile {
            <<entity>>
            +UUID id
            +String preferredIntensity
            +String sensitivityAvoidance
            +updatePreferences()
        }

        class FragranceIdentity {
            <<entity>>
            +UUID id
            +String explanation
            +IdentityStatus status
            +DateTime generatedAt
            +markStale()
        }
    }

    namespace Catalogue {
        class FragranceFamily {
            <<entity>>
            +UUID id
            +String name
            +String status
        }

        class FragranceNote {
            <<entity>>
            +UUID id
            +String name
            +String status
        }

        class Perfume {
            <<aggregate root>>
            +UUID id
            +String name
            +String description
            +String status
            +archive()
        }

        class PerfumeVariant {
            <<entity>>
            +UUID id
            +String bottleSize
            +String concentration
            +String sku
            +Decimal price
            +String availabilityStatus
            +isSellable()
        }

        class Promotion {
            <<entity>>
            +UUID id
            +String code
            +String discountType
            +Decimal discountValue
            +String status
            +isEligible()
        }
    }

    namespace Commerce {
        class Cart {
            <<aggregate root>>
            +UUID id
            +String visitorSessionKey
            +String status
            +addItem()
            +updateQuantity()
            +applyPromotion()
            +calculateTotal()
        }

        class CartItem {
            <<entity>>
            +UUID id
            +Integer quantity
            +String personalisedLabel
            +String engravingName
            +String giftMessage
        }

        class Order {
            <<aggregate root>>
            +UUID id
            +String orderStatus
            +Decimal subtotal
            +Decimal discountTotal
            +Decimal deliveryChargeSnapshot
            +Decimal total
            +requestCancellation()
            +canCancel()
        }

        class OrderItem {
            <<entity>>
            +UUID id
            +String skuSnapshot
            +String productNameSnapshot
            +Decimal unitPriceSnapshot
            +Integer quantity
        }

        class Payment {
            <<entity>>
            +UUID id
            +String paymentStatus
            +String provider
            +String providerReference
            +recordVerifiedResult()
        }

        class Invoice {
            <<entity>>
            +UUID id
            +String invoiceNumber
            +Decimal totalSnapshot
            +DateTime issuedAt
        }

        class DeliveryMethod {
            <<entity>>
            +UUID id
            +String name
            +Decimal charge
            +String status
        }

        class Shipment {
            <<entity>>
            +UUID id
            +String trackingReference
            +String shipmentStatus
            +String confirmationSource
            +DateTime deliveredAt
            +recordStatus()
            +confirmDelivered()
        }
    }

    namespace Inventory {
        class InventoryBalance {
            <<entity>>
            +Integer onHand
            +Integer reserved
            +Integer lowStockThreshold
            +availableQuantity()
            +isLowStock()
        }

        class InventoryReservation {
            <<entity>>
            +UUID id
            +Integer quantity
            +String status
            +DateTime expiresAt
            +commit()
            +release()
            +isExpired()
        }

        class InventoryMovement {
            <<ledger entry>>
            +UUID id
            +Integer quantityDelta
            +String reason
            +String reference
            +DateTime createdAt
        }

        class ProductionBatch {
            <<entity>>
            +UUID id
            +String batchCode
            +Integer producedQuantity
            +String status
            +DateTime releasedAt
            +releaseToInventory()
        }
    }

    namespace Experience {
        class DiscoveryQuizAttempt {
            <<entity>>
            +UUID id
            +String visitorSessionKey
            +String status
            +complete()
        }

        class AIRecommendationRun {
            <<entity>>
            +UUID id
            +String status
            +String providerReference
        }

        class SupportConversation {
            <<aggregate root>>
            +UUID id
            +String visitorSessionKey
            +String status
            +addMessage()
            +close()
        }

        class Review {
            <<entity>>
            +UUID id
            +Integer rating
            +String reviewText
            +String moderationStatus
            +moderate()
        }

        class LoyaltyAccount {
            <<entity>>
            +Integer pointsBalance
            +applyPoints()
        }
    }

    namespace Administration {
        class AdminAccount {
            <<entity>>
            +UUID id
            +String email
            +String status
        }

        class AdminRole {
            <<entity>>
            +UUID id
            +String name
            +String status
            +grants()
        }

        class AuditEvent {
            <<immutable record>>
            +UUID id
            +String actorType
            +String action
            +String targetType
            +String targetId
            +String outcome
            +DateTime createdAt
        }
    }

    namespace Application {
        class CheckoutService {
            <<application service>>
            +revalidateCheckout()
            +reserveInventory()
            +createOrder()
            +initiatePayment()
            +finaliseSuccessfulPayment()
            +releaseFailedReservation()
        }

        class RecommendationService {
            <<application service>>
            +buildApprovedContext()
            +requestRecommendations()
            +validateRecommendationOutput()
        }

        class SupportService {
            <<application service>>
            +handlePublicSupport()
            +handleCustomerSupport()
            +loadAuthoritativeOrderFacts()
        }

        class PaymentGateway {
            <<interface>>
            +initiatePayment()
            +verifyPaymentResult()
        }

        class AIProvider {
            <<interface>>
            +generateRecommendation()
            +generateSupportResponse()
        }

        class DeliveryProvider {
            <<interface>>
            +createShipment()
            +transitionShipmentStatus()
        }

        class StripePaymentAdapter {
            <<adapter>>
        }

        class AIServiceAdapter {
            <<adapter>>
        }

        class InternalDeliverySimulator {
            <<internal adapter>>
        }
    }

    %% Identity relationships
    Customer "1" *-- "0..2" Address : maintains
    Customer "1" *-- "0..1" FragrancePreferenceProfile : owns
    FragrancePreferenceProfile "1" *-- "0..1" FragranceIdentity : generates
    FragranceIdentity --> FragranceFamily : primary family
    FragrancePreferenceProfile --> FragranceNote : favourite notes

    %% Catalogue relationships
    FragranceFamily "1" <-- "0..*" Perfume : primary family
    Perfume "1" *-- "1..*" PerfumeVariant : variants
    Perfume "0..*" --> "0..*" FragranceNote : layered note assignments

    %% Cart and order relationships
    Customer "0..1" --> "0..*" Cart : owns after authentication
    Cart "1" *-- "0..*" CartItem : contains
    CartItem --> PerfumeVariant : selected variant
    Cart --> Promotion : applies optional
    Customer "1" --> "0..*" Order : places
    Order "1" *-- "1..*" OrderItem : snapshots
    OrderItem --> PerfumeVariant : source variant
    Order --> Promotion : applied optional
    Order --> DeliveryMethod : selected method
    Order "1" *-- "0..1" Payment : payment state
    Order "1" *-- "0..1" Invoice : invoice
    Order "1" *-- "0..1" Shipment : shipment

    %% Inventory relationships
    PerfumeVariant "1" *-- "1" InventoryBalance : inventory
    PerfumeVariant "1" --> "0..*" InventoryReservation : reserved units
    Order "1" --> "0..*" InventoryReservation : checkout holds
    PerfumeVariant "1" --> "0..*" InventoryMovement : movements
    PerfumeVariant "1" --> "0..*" ProductionBatch : finished batches
    ProductionBatch "0..1" --> "0..*" InventoryMovement : release movement

    %% Experience / participation
    Customer "0..1" --> "0..*" DiscoveryQuizAttempt : may complete
    Customer "0..1" --> "0..*" AIRecommendationRun : may receive
    DiscoveryQuizAttempt "0..1" --> "0..*" AIRecommendationRun : may inform
    FragrancePreferenceProfile "0..1" --> "0..*" AIRecommendationRun : may inform
    Customer "0..1" --> "0..*" SupportConversation : may start
    Customer "1" --> "0..*" Review : writes
    Review --> Perfume : reviews
    Customer "1" *-- "0..1" LoyaltyAccount : loyalty

    %% Administration
    AdminRole "1" --> "0..*" AdminAccount : assigned to
    AdminAccount "0..1" --> "0..*" AuditEvent : may perform

    %% Application-service dependencies
    CheckoutService ..> Cart
    CheckoutService ..> Order
    CheckoutService ..> InventoryReservation
    CheckoutService ..> InventoryBalance
    CheckoutService ..> PaymentGateway
    CheckoutService ..> DeliveryProvider

    RecommendationService ..> FragrancePreferenceProfile
    RecommendationService ..> DiscoveryQuizAttempt
    RecommendationService ..> Perfume
    RecommendationService ..> AIRecommendationRun
    RecommendationService ..> AIProvider

    SupportService ..> SupportConversation
    SupportService ..> Order
    SupportService ..> AIProvider

    PaymentGateway <|.. StripePaymentAdapter
    AIProvider <|.. AIServiceAdapter
    DeliveryProvider <|.. InternalDeliverySimulator
